# EchoParse

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml
Backend/: .dockerignore  .gitignore  Dockerfile  Dockerfile.api  Dockerfile.worker  pyproject.toml
Backend/alembic/: env.py
Backend/alembic/versions/: 44f74cd07939_initial_tables.py
Backend/app/: main.py
Backend/app/api/: dependencies.py  router.py
Backend/app/core/: __init__.py  all_models.py  config.py  database.py  exceptions.py  handlers.py  redis.py
Backend/app/modules/transcriptions/: models.py  router.py  schemas.py  service.py
Backend/app/worker/: arq_worker.py  celery_app.py  tasks.py
Frontend/: .dockerignore  .gitignore  .prettierignore  Dockerfile.dev  README.md  angular.json  package-lock.json  package.json  pnpm-lock.yaml  proxy.conf.json
Frontend/src/: index.html  styles.scss
Frontend/src/app/: app.routes.ts  app.spec.ts  app.ts
Frontend/src/app/core/services/: web-socket.ts
Frontend/src/app/features/transcriptions/: transcriptions.spec.ts  transcriptions.ts
Frontend/src/app/features/transcriptions/components/: transcription-card.ts  transcription-list.ts  upload-area.spec.ts  upload-area.ts
Frontend/src/app/features/transcriptions/models/: transcription.ts
Frontend/src/app/features/transcriptions/services/: transcription.ts
